<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_for_day_details_backg">


    <ImageView
        android:id="@+id/tv_image_detail"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:src="@drawable/var_sleet"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="208dp"
        android:paddingLeft="42dp"
        android:paddingStart="42dp">

        <TextView
            android:id="@+id/tv_city_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/arkhip_font"
            android:gravity="center"
            android:paddingEnd="4dp"
            android:paddingRight="4dp"
            android:text="@string/ivano_frankivsk"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <View
            android:layout_width="1dp"
            android:layout_height="12dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="4dp"
            android:background="@android:color/white"
            android:gravity="center"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/tv_population"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/arkhip_font"
            android:text="@string/text_population"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textStyle="normal"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="26dp"
        android:background="@drawable/shape_for_day_details"
        android:elevation="10dp"
        android:orientation="vertical"
        android:translationZ="25dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp">

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="22dp"
                android:fontFamily="@font/bitter_regular"
                android:text="@string/test_19_may"
                android:textAllCaps="true"
                android:textColor="@color/colorTextDay"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_day_of_week"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/bitter_regular"
                android:text="@string/saturday"
                android:textAllCaps="true"
                android:textColor="@color/colorTextDay"
                android:textSize="16sp"
                android:textStyle="bold"/>



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:id="@+id/icons_layout"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image_view_left"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/icon_head"
                    android:src="@drawable/_11_20_sunny_central_shirt"/>

                <ImageView
                    android:id="@+id/image_view_central"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginStart="2dp"
                    android:contentDescription="@string/icon_head"
                    android:src="@drawable/_00_10_cloud_right_shoes"/>

                <ImageView
                    android:id="@+id/image_view_right"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginStart="2dp"
                    android:contentDescription="@string/icon_head"
                    android:src="@drawable/_21_25_sunny_left_cap"/>
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="140dp">

            <TextView
                android:id="@+id/tv_detail_temperature"
                android:layout_width="wrap_content"
                android:layout_height="95dp"
                android:layout_alignTop="@+id/tv_celcium"
                android:layout_toLeftOf="@+id/tv_celcium"
                android:layout_toStartOf="@+id/tv_celcium"
                android:fontFamily="@font/ubuntu_mono"
                android:text="@string/test_16"
                android:textColor="@color/colorTextDay"
                android:textSize="100sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_celcium"
                android:layout_width="wrap_content"
                android:layout_height="95dp"
                android:layout_above="@+id/tv_condition"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="52dp"
                android:layout_marginRight="56dp"
                android:fontFamily="@font/ubuntu_mono"
                android:text="@string/celcium"
                android:textColor="@color/colorTextDay"
                android:textSize="100sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_condition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/bitter_regular"
                android:text="@string/test_cloud"
                android:textAllCaps="true"
                android:textColor="@color/colorTextDay"
                android:textSize="14sp"
                android:textStyle="bold"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tv_condition"
                android:layout_marginTop="-16dp"
                android:background="#fac481"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:fontFamily="@font/arkhip_font"
                    android:text="@string/morning"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/tv_morning_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape_for_temp_day_night"
                    android:padding="8dp"
                    android:text="@string/test_16"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:fontFamily="@font/arkhip_font"
                    android:text="@string/day"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/tv_day_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape_for_temp_day_night"
                    android:padding="8dp"
                    android:text="@string/test_16"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:fontFamily="@font/arkhip_font"
                    android:text="@string/evening"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/tv_evening_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape_for_temp_day_night"
                    android:padding="8dp"
                    android:text="@string/test_16"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:fontFamily="@font/arkhip_font"
                    android:text="@string/night"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/tv_night_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape_for_temp_day_night"
                    android:padding="8dp"
                    android:text="@string/test_16"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/ubuntu_mono"
                android:gravity="center"
                android:text="@string/text_humidity"/>

            <TextView
                android:id="@+id/tv_pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/ubuntu_mono"
                android:gravity="center"
                android:text="@string/text_pressure"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>